# otcurrent_pi

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Plugin.cmake  README-git.md  README.md  appveyor.yml  ldd.py  leamas.oTcurrent.bat  otcurrent-plugin.xml.in  otcurrentUIDialog.cpp  otcurrent_pi.fbp
.circleci/: config.yml
build-deps/: control  macos-deps  opencpn-deps.spec
ci/: circleci-build-macos.sh
cmake/: PluginLibs.cmake  PluginLocalization.cmake  TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.otcurrent.yaml  org.opencpn.OpenCPN.Plugin.shipdriver.yaml
libs/plugingl/include/: pidc.h
libs/plugingl/src/: pidc.cpp
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/otcurrent/: antora.yml
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  en_US.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.mo  fr.po  fr_FR.po  gl.po  gl_ES.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  nb.po  nb_NO.po  nl.po  nl_NL.po  otcurrent_pi.pot  (+16 more)
src/: ODPlatform.cpp  ODPlatform.h  bbox.cpp  folder.xpm  georef.cpp  georef.h  globals.h  icons.cpp  icons.h  otcurrentOverlayFactory.cpp  otcurrentOverlayFactory.cpp.bak  otcurrentOverlayFactory.h  otcurrentRecord.h  otcurrentRecordSet.h  otcurrentUIDialog.cpp  otcurrentUIDialog.h  otcurrentUIDialogBase.cpp  otcurrentUIDialogBase.h  otcurrent_pi.cpp  otcurrent_pi.h  pidc.cpp  pidc.h  resource.h  tcmgr.cpp  tcmgr.h.bak  timectrl.cpp  timectrl.h  version.h
src/GL/: gl.h  glext.h
src/android/wx/: datectrl.h  timectrl.h
